create user entity

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=c6d47ba9ad447c2d26019f2fc8b6370e
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
