--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "knplabs/knp-time-bundle": "^1.16",
     "phpdocumentor/reflection-docblock": "^5.2",
     "sensio/framework-extra-bundle": "^6.1",
+    "symfony/apache-pack": "^1.0",
     "symfony/asset": "5.4.*",
     "symfony/console": "5.4.*",
     "symfony/dotenv": "5.4.*",
@@ -92,6 +93,11 @@
     ],
     "post-update-cmd": [
       "@auto-scripts"
+    ],
+    "compile": [
+      "php bin/console make:migration", 
+      "php bin/console doctrine:migration:migrate", 
+      "php bin/console doctrine:fixtures:load" 
     ]
   },
   "conflict": {
