--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "composer/package-versions-deprecated": "1.11.99.2",
     "doctrine/annotations": "^1.0",
     "doctrine/doctrine-bundle": "^2.4",
+    "doctrine/doctrine-fixtures-bundle": "^3.4",
     "doctrine/doctrine-migrations-bundle": "^3.1",
     "doctrine/orm": "^2.9",
     "friendsofsymfony/ckeditor-bundle": "^2.3",
@@ -95,9 +96,7 @@
       "@auto-scripts"
     ],
     "compile": [
-      "php bin/console make:migration",
-      "php bin/console doctrine:migration:migrate",
-      "php bin/console doctrine:fixtures:load"
+      "php bin/console doctrine:schema:update -f --complete"
     ]
   },
   "conflict": {
