Add mailjet to the project and fix some displays and lang

--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ APP_SECRET=c6d47ba9ad447c2d26019f2fc8b6370e
 DATABASE_URL="mysql://b1df59bf6f9da9:eacaf09f@us-cdbr-east-04.cleardb.com/heroku_71c940eec03e142?reconnect=true"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailjet-mailer ###
+# MAILER_DSN=mailjet+api://PUBLIC_KEY:PRIVATE_KEY@api.mailjet.com
+MAILER_DSN=mailjet+smtp://5ea1ae1779664c4a9937feebe7a39f35:b3e1969e5e19f60304edb9eeaf7d9fb3@in-v3.mailjet.com
+###< symfony/mailjet-mailer ###
