--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,3 +1,7 @@
 framework:
     mailer:
         dsn: '%env(MAILER_DSN)%'
+        envelope:
+            sender: 'jerome.potie@gmail.com'
+        headers:
+            from: 'Jérôme <jerome.potie@gmail.com>'
