--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "symfony/http-client": "5.4.*",
     "symfony/intl": "5.4.*",
     "symfony/mailer": "5.4.*",
+    "symfony/mailjet-mailer": "5.4.*",
     "symfony/mime": "5.4.*",
     "symfony/monolog-bundle": "^3.1",
     "symfony/notifier": "5.4.*",
@@ -41,7 +42,7 @@
     "symfony/serializer": "5.4.*",
     "symfony/string": "5.4.*",
     "symfony/translation": "5.4.*",
-    "symfony/twig-bundle": "5.4.x-dev",
+    "symfony/twig-bundle": "5.4.*",
     "symfony/validator": "5.4.*",
     "symfony/web-link": "5.4.*",
     "symfony/yaml": "5.4.*",
