--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,10 @@
       "@auto-scripts"
     ],
     "compile": [
-      "php bin/console doctrine:schema:update -f --complete"
+      "php bin/console doctrine:schema:update -f --complete",
+      "php bin/console ckeditor:install",
+      "php bin/console assets:install public",
+      "heroku run php bin/console doctrine:fixtures:load"
     ]
   },
   "conflict": {
