--- a/composer.json
+++ b/composer.json
@@ -1,115 +1,127 @@
 {
-  "type": "project",
-  "license": "proprietary",
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "require": {
-    "php": ">=7.2.5",
-    "ext-ctype": "*",
-    "ext-iconv": "*",
-    "antishov/doctrine-extensions-bundle": "^1.4",
-    "composer/package-versions-deprecated": "1.11.99.2",
-    "doctrine/annotations": "^1.0",
-    "doctrine/doctrine-bundle": "^2.4",
-    "doctrine/doctrine-fixtures-bundle": "^3.4",
-    "doctrine/doctrine-migrations-bundle": "^3.1",
-    "doctrine/orm": "^2.9",
-    "friendsofsymfony/ckeditor-bundle": "^2.3",
-    "knplabs/knp-time-bundle": "^1.16",
-    "phpdocumentor/reflection-docblock": "^5.2",
-    "sensio/framework-extra-bundle": "^6.1",
-    "symfony/apache-pack": "^1.0",
-    "symfony/asset": "5.4.*",
-    "symfony/console": "5.4.*",
-    "symfony/dotenv": "5.4.*",
-    "symfony/expression-language": "5.4.*",
-    "symfony/flex": "^1.3.1",
-    "symfony/form": "5.4.*",
-    "symfony/framework-bundle": "5.4.*",
-    "symfony/http-client": "5.4.*",
-    "symfony/intl": "5.4.*",
-    "symfony/mailer": "5.4.*",
-    "symfony/mailjet-mailer": "5.4.*",
-    "symfony/mime": "5.4.*",
-    "symfony/monolog-bundle": "^3.1",
-    "symfony/notifier": "5.4.*",
-    "symfony/process": "5.4.*",
-    "symfony/property-access": "5.4.*",
-    "symfony/property-info": "5.4.*",
-    "symfony/proxy-manager-bridge": "5.4.*",
-    "symfony/runtime": "5.4.*",
-    "symfony/security-bundle": "5.4.*",
-    "symfony/serializer": "5.4.*",
-    "symfony/string": "5.4.*",
-    "symfony/translation": "5.4.*",
-    "symfony/twig-bundle": "5.4.*",
-    "symfony/validator": "5.4.*",
-    "symfony/web-link": "5.4.*",
-    "symfony/yaml": "5.4.*",
-    "symfonycasts/reset-password-bundle": "^1.8",
-    "symfonycasts/verify-email-bundle": "^1.5",
-    "twig/extra-bundle": "^2.12|^3.0",
-    "twig/string-extra": "^3.3",
-    "twig/twig": "^2.12|^3.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "symfony/browser-kit": "5.4.x-dev",
-    "symfony/css-selector": "5.4.x-dev",
-    "symfony/debug-bundle": "5.4.x-dev",
-    "symfony/maker-bundle": "^1.0",
-    "symfony/phpunit-bridge": "^5.3",
-    "symfony/stopwatch": "5.4.x-dev",
-    "symfony/var-dumper": "5.4.x-dev",
-    "symfony/web-profiler-bundle": "5.4.x-dev"
-  },
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": {
-      "*": "dist"
+    "type": "project",
+    "license": "proprietary",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "require": {
+        "php": ">=7.2.5",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "antishov/doctrine-extensions-bundle": "^1.4",
+        "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.9",
+        "friendsofsymfony/ckeditor-bundle": "^2.3",
+        "knplabs/knp-time-bundle": "^1.16",
+        "phpdocumentor/reflection-docblock": "^5.2",
+        "sensio/framework-extra-bundle": "^6.1",
+        "symfony/apache-pack": "^1.0",
+        "symfony/asset": "5.4.*",
+        "symfony/console": "5.4.*",
+        "symfony/dotenv": "5.4.*",
+        "symfony/expression-language": "5.4.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/form": "5.4.*",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/http-client": "5.4.*",
+        "symfony/intl": "5.4.*",
+        "symfony/mailer": "5.4.*",
+        "symfony/mailjet-mailer": "5.4.*",
+        "symfony/mime": "5.4.*",
+        "symfony/monolog-bundle": "^3.1",
+        "symfony/notifier": "5.4.*",
+        "symfony/process": "5.4.*",
+        "symfony/property-access": "5.4.*",
+        "symfony/property-info": "5.4.*",
+        "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/runtime": "5.4.*",
+        "symfony/security-bundle": "5.4.*",
+        "symfony/serializer": "5.4.*",
+        "symfony/string": "5.4.*",
+        "symfony/translation": "5.4.*",
+        "symfony/twig-bundle": "5.4.*",
+        "symfony/validator": "5.4.*",
+        "symfony/web-link": "5.4.*",
+        "symfony/yaml": "5.4.*",
+        "symfonycasts/reset-password-bundle": "^1.8",
+        "symfonycasts/verify-email-bundle": "^1.5",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/string-extra": "^3.3",
+        "twig/twig": "^2.12|^3.0"
     },
-    "sort-packages": true
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "App\\Tests\\": "tests/"
-    }
-  },
-  "replace": {
-    "symfony/polyfill-ctype": "*",
-    "symfony/polyfill-iconv": "*",
-    "symfony/polyfill-php72": "*"
-  },
-  "scripts": {
-    "auto-scripts": {
-      "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.4.x-dev",
+        "symfony/css-selector": "5.4.x-dev",
+        "symfony/debug-bundle": "5.4.x-dev",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^5.3",
+        "symfony/stopwatch": "5.4.x-dev",
+        "symfony/var-dumper": "5.4.x-dev",
+        "symfony/web-profiler-bundle": "5.4.x-dev"
     },
-    "post-install-cmd": [
-      "@auto-scripts"
-    ],
-    "post-update-cmd": [
-      "@auto-scripts"
-    ],
-    "compile": [
-      "php bin/console doctrine:schema:update -f --complete",
-      "php bin/console ckeditor:install",
-      "php bin/console assets:install public",
-      "php bin/console doctrine:fixtures:load"
-    ]
-  },
-  "conflict": {
-    "symfony/symfony": "*"
-  },
-  "extra": {
-    "symfony": {
-      "allow-contrib": false,
-      "require": "5.4.*"
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*"
+    },
+    "scripts": {
+        "db:install": [
+            "php bin/console doctrine:database:create",
+            "php bin/console doctrine:schema:update -f --complete",
+            "php bin/console doctrine:fixtures:load -n"
+        ],
+        "db:reload": [
+            "php bin/console doctrine:database:drop --force",
+            "composer db:install"
+        ],
+        "start": [
+            "symfony server:start --no-tls -d"
+        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ],
+        "compile": [
+            "php bin/console doctrine:schema:update -f --complete",
+            "php bin/console ckeditor:install",
+            "php bin/console assets:install public",
+            "php bin/console doctrine:fixtures:load -n"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "5.4.*"
+        }
     }
-  }
 }
